sim support timeout and activate

--- a/simulation/Makefile
+++ b/simulation/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CFLAGS = -Wall -Werror
 
-kernel: main.o cmd.o proc.o
+kernel: main.o cmd.o resource.o proc.o 
 	$(CC) $(CFLAGS) -o kernel $^
 
 clean:
